Prevent Hidden CharacterAdder From Overlapping Visible CharacterBlock
-Previously, if the bottom characterBlock was behind the "invisible" characterAdder, its fields would become unclickable. Now, focus should shift based on where the user's mouse is, allowing them to fully utilize both the characterBlock fields and the characterAdder

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,13 @@ textarea {
 }
 
 #characterContainer{
+	position: relative;
 	padding-top: 20px;
+	z-index: 50;
+}
+
+#characterContainer:hover{
+	z-index: 150;
 }
 
 #characterBlock{
@@ -146,6 +152,7 @@ textarea {
 	bottom: 0px;
 	height: 120px;
 	width: 100%;
+	z-index: 100;
 }
 
 #characterAdder{
